--- a/localisation/simp_chinese/MD_focus_DEN_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_DEN_l_simp_chinese.yml
@@ -1355,7 +1355,7 @@
  DEN_air_defence_tt: "将[?DEN_air_defence_change|+%]§Y空中防御§!用于§H国防军§!(现有空中防御：[?DEN_air_defence|Y%])"
  DEN_air_agility_tt: "将[?DEN_air_agility_change|+%]§Y空中机动性§!用于§H国防军§!(现有空中机动性：[?DEN_air_agility|Y%])"
  DEN_air_mission_efficiency_tt: "将[?DEN_air_mission_efficiency_change|+%]§Y空军任务效率§!用于§H国防军§!(现有空军任务效率：[?DEN_air_mission_efficiency|Y%])"
- DEN_navy_personnel_cost_multiplier_modifier_tt: "将[?DEN_navy_personnel_cost_multiplier_modifier_change|-%]§Y海军人员成本§!用于§H国防军§!(现有海军人员成本：[?DEN_navy_personnel_cost_multiplier_modifier|Y%])"
+ DEN_navy_personnel_cost_multiplier_modifier_tt: "将[?DEN_navy_personnel_cost_multiplier_modifier_change|+%]§Y海军人员成本§!用于§H国防军§!(现有海军人员成本：[?DEN_navy_personnel_cost_multiplier_modifier|Y%])"
  DEN_positioning_tt: "将[?DEN_positioning_change|-%]§Y海军定位§!用于§H国防军§!(现有海军定位：[?DEN_positioning|Y%])"
  DEN_navy_max_range_factor_tt: "将[?DEN_navy_max_range_factor_change|+%]§Y海军最大航程§!用于§H国防军§!(现有海军最大航程：[?DEN_navy_max_range_factor|Y%])"
  DEN_terrain_penalty_reduction_tt: "将[?DEN_terrain_penalty_reduction_change|+%]§Y地形惩罚减免§!用于§H国防军§!(现有地形惩罚减免：[?DEN_terrain_penalty_reduction|Y%])"
@@ -1363,7 +1363,7 @@
  DEN_equipment_cost_multiplier_modifier_tt: "将[?DEN_equipment_cost_multiplier_modifier_change|-%]§Y装备消耗§!用于§H国防军§!(现有装备消耗：[?DEN_equipment_cost_multiplier_modifier|Y%])"
  DEN_bureaucracy_cost_multiplier_modifier_tt: "将[?DEN_bureaucracy_cost_multiplier_modifier_change|-%]§Y行政花费§!用于§H国防军§!(现有行政花费：[?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
  DEN_military_factories_productivity_tt: "将[?DEN_military_factories_productivity_change|-%]§Y军用工厂生产率§!用于§H国防军§!(现有军用工厂生产率：[?DEN_military_factories_productivity|Y%])"
- DEN_dockyard_productivity_tt: "将[?DEN_dockyard_productivity_change|-%]§Y船坞生产率§!用于§H国防军§!(现有船坞生产率：[?DEN_dockyard_productivity|Y%])"
+ DEN_dockyard_productivity_tt: "将[?DEN_dockyard_productivity_change|+%]§Y船坞生产率§!用于§H国防军§!(现有船坞生产率：[?DEN_dockyard_productivity|Y%])"
  DEN_monthly_population_tt: "将[?DEN_monthly_population_change|+%]§Y月度人口增长§!用于§H丹麦王国§!(现有月度人口增长：[?DEN_monthly_population|Y%])"
  DEN_Culture_drift_defence_factor_tt: "将[?DEN_Culture_drift_defence_factor_change|+%]§Y文化变化抵制§!用于§H丹麦文化§!(现有文化变化情况：[?DEN_Culture_drift_defence_factor|Y%])"
  DEN_Culture_conscription_factor_tt: "将[?DEN_Culture_conscription_factor_change|+%]§Y征兵制§!用于§H丹麦文化§!(现有军队招募情况：[?DEN_Culture_conscription_factor|Y%])"
