--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -8021,3 +8021,21 @@
  PER.Nat_Autocracy_icon: "£PER_military_junta"
  PER.Nat_Fascism_icon: "£PER_fascism"
  PER.nation_party_icon: "£PER_Nat_Populism_small"
+ AFG.liberalism_2017_icon: "£AFG_liberalism_2017"
+ AFG.Western_Autocracy_icon: "£AFG_western_autocracy"
+ AFG.Communist-State_icon: "£AFG_communist_state"
+ AFG.anarchist_communism_icon: "£AFG_anarchist_communism"
+ AFG.Conservative_icon: "£AFG_conservative"
+ AFG.Autocracy_icon: "£AFG_autocracy"
+ AFG.Mod_Vilayat_e_Faqih_icon: "£AFG_moderate_shiites"
+ AFG.Vilayat_e_Faqih_icon: "£AFG_hardline_shiites"
+ AFG.Caliphate_icon: "£AFG_salafist_jihadism"
+ AFG.Kingdom_icon: "£AFG_kingdom"
+ AFG.neutral_Social_icon: "£AFG_neutral_social"
+ AFG.Neutral_Autocracy_icon: "£AFG_neutral_autocracy"
+ AFG.Neutral_Muslim_Brotherhood_icon: "£AFG_neutral_muslim_brotherhood"
+ AFG.Neutral_conservatism_icon: "£AFG_neutral_conservatism"
+ AFG.Neutral_Communism_icon: "£AFG_neutral_communism"
+ AFG.Nat_Autocracy_icon: "£AFG_nat_autocracy"
+ AFG.Nat_Populism_icon: "£AFG_nat_populism"
+ AFG.Monarchist_icon: "£AFG_monarchist"
